<resources>
    <string name="app_name">EndpointTest</string>
    <string name="status_ok_default">OK</string>
    <string name="status_warning_default">WARNING</string>
    <string name="status_bad_default">BAD</string>
    <string name="menu_add_connection">Add Connection</string>
    <string name="name_caption">Name</string>
    <string name="default_name">Новое подключение</string>
    <string name="default_endpoint">/backend/rest/stateful/personal/ping</string>
    <string name="endpoint_caption">Endpoint</string>
    <string name="request_type_caption">Request Type</string>
    <string name="result_ok_default">ResultOK</string>
    <string name="result_warning_default">ResultWARNING</string>
    <string name="result_bad_default">ResultBAD</string>
    <string name="port_caption">Port</string>
    <string name="server_caption">Server</string>
    <string name="server_timeout_caption">Server Timeout</string>
    <string name="connection_timeout_caption">Connection Timeout</string>
    <string name="remove">Remove</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="settings_add_connection_title">New Connection</string>
    <string name="settings_title">Settings</string>
    <string name="connection_timeout_default">4</string>
    <string name="server_default">https://portal.kubankredit.ru</string>
    <string name="timeout_default">5</string>
    <string name="clear_log">Clear Log</string>
</resources>
